src/my_grammarParser.py
# Generated from my_grammar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class my_grammarParser ( Parser ):

    grammarFileName = "my_grammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "';'", "'CONNECT'", "'TO'", 
                     "<INVALID>", "'LIST'", "'ALL'", "'GRAPHS'", "<INVALID>", 
                     "':'", "'WRITE'", "'SELECT'", "'FROM'", "'WHERE'", 
                     "'COUNT'", "'EXISTS'", "'DEGREE'", "'DISTANCE'", "'COUNTISOLATED'", 
                     "'('", "')'", "<INVALID>", "','", "'-'", "'>'", "'_'", 
                     "'.'", "'ID'", "<INVALID>", "'|'", "'*'", "'+'", "'?'" ]

    symbolicNames = [ "<INVALID>", "WS", "SEMI", "KW_CONNECT", "KW_TO", 
                      "STRING", "KW_LIST", "KW_ALL", "KW_GRAPHS", "NT_NAME", 
                      "OP_EQ", "KW_WRITE", "KW_SELECT", "KW_FROM", "KW_WHERE", 
                      "KW_COUNT", "KW_EXISTS", "KW_DEGREE", "KW_DISTANCE", 
                      "KW_COUNT_ISOLATED", "LBR", "RBR", "IDENT", "COMMA", 
                      "OP_MINUS", "OP_GR", "UNDERSCORE", "DOT", "KW_ID", 
                      "INT", "MID", "OP_STAR", "OP_PLUS", "OP_Q" ]

    RULE_s = 0
    RULE_script = 1
    RULE_stmt = 2
    RULE_named_pattern_stmt = 3
    RULE_select_stmt = 4
    RULE_obj_expr = 5
    RULE_vs_info = 6
    RULE_where_expr = 7
    RULE_v_expr = 8
    RULE_pattern = 9
    RULE_alt_elem = 10
    RULE_seq = 11
    RULE_seq_elem = 12
    RULE_prim_pattern = 13

    ruleNames =  [ "s", "script", "stmt", "named_pattern_stmt", "select_stmt", 
                   "obj_expr", "vs_info", "where_expr", "v_expr", "pattern", 
                   "alt_elem", "seq", "seq_elem", "prim_pattern" ]

    EOF = Token.EOF
    WS=1
    SEMI=2
    KW_CONNECT=3
    KW_TO=4
    STRING=5
    KW_LIST=6
    KW_ALL=7
    KW_GRAPHS=8
    NT_NAME=9
    OP_EQ=10
    KW_WRITE=11
    KW_SELECT=12
    KW_FROM=13
    KW_WHERE=14
    KW_COUNT=15
    KW_EXISTS=16
    KW_DEGREE=17
    KW_DISTANCE=18
    KW_COUNT_ISOLATED=19
    LBR=20
    RBR=21
    IDENT=22
    COMMA=23
    OP_MINUS=24
    OP_GR=25
    UNDERSCORE=26
    DOT=27
    KW_ID=28
    INT=29
    MID=30
    OP_STAR=31
    OP_PLUS=32
    OP_Q=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def script(self):
            return self.getTypedRuleContext(my_grammarParser.ScriptContext,0)


        def EOF(self):
            return self.getToken(my_grammarParser.EOF, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = my_grammarParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_s)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.script()
            self.state = 29
            self.match(my_grammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ScriptContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(my_grammarParser.StmtContext,0)


        def SEMI(self):
            return self.getToken(my_grammarParser.SEMI, 0)

        def script(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_grammarParser.ScriptContext)
            else:
                return self.getTypedRuleContext(my_grammarParser.ScriptContext,i)


        def getRuleIndex(self):
            return my_grammarParser.RULE_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript" ):
                listener.enterScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript" ):
                listener.exitScript(self)




    def script(self):

        localctx = my_grammarParser.ScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_script)
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.stmt()
                self.state = 32
                self.match(my_grammarParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.stmt()
                self.state = 35
                self.match(my_grammarParser.SEMI)
                self.state = 39
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 36
                        self.script() 
                    self.state = 41
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_CONNECT(self):
            return self.getToken(my_grammarParser.KW_CONNECT, 0)

        def KW_TO(self):
            return self.getToken(my_grammarParser.KW_TO, 0)

        def STRING(self):
            return self.getToken(my_grammarParser.STRING, 0)

        def KW_LIST(self):
            return self.getToken(my_grammarParser.KW_LIST, 0)

        def KW_ALL(self):
            return self.getToken(my_grammarParser.KW_ALL, 0)

        def KW_GRAPHS(self):
            return self.getToken(my_grammarParser.KW_GRAPHS, 0)

        def select_stmt(self):
            return self.getTypedRuleContext(my_grammarParser.Select_stmtContext,0)


        def named_pattern_stmt(self):
            return self.getTypedRuleContext(my_grammarParser.Named_pattern_stmtContext,0)


        def KW_WRITE(self):
            return self.getToken(my_grammarParser.KW_WRITE, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = my_grammarParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [my_grammarParser.KW_CONNECT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(my_grammarParser.KW_CONNECT)
                self.state = 45
                self.match(my_grammarParser.KW_TO)
                self.state = 46
                self.match(my_grammarParser.STRING)
                pass
            elif token in [my_grammarParser.KW_LIST]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(my_grammarParser.KW_LIST)
                self.state = 48
                self.match(my_grammarParser.KW_ALL)
                self.state = 49
                self.match(my_grammarParser.KW_GRAPHS)
                pass
            elif token in [my_grammarParser.KW_SELECT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 50
                self.select_stmt()
                pass
            elif token in [my_grammarParser.NT_NAME]:
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.named_pattern_stmt()
                pass
            elif token in [my_grammarParser.KW_WRITE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 52
                self.match(my_grammarParser.KW_WRITE)
                self.state = 53
                self.select_stmt()
                self.state = 54
                self.match(my_grammarParser.KW_TO)
                self.state = 55
                self.match(my_grammarParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Named_pattern_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT_NAME(self):
            return self.getToken(my_grammarParser.NT_NAME, 0)

        def OP_EQ(self):
            return self.getToken(my_grammarParser.OP_EQ, 0)

        def pattern(self):
            return self.getTypedRuleContext(my_grammarParser.PatternContext,0)


        def getRuleIndex(self):
            return my_grammarParser.RULE_named_pattern_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamed_pattern_stmt" ):
                listener.enterNamed_pattern_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamed_pattern_stmt" ):
                listener.exitNamed_pattern_stmt(self)




    def named_pattern_stmt(self):

        localctx = my_grammarParser.Named_pattern_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_named_pattern_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(my_grammarParser.NT_NAME)
            self.state = 60
            self.match(my_grammarParser.OP_EQ)
            self.state = 61
            self.pattern()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Select_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_SELECT(self):
            return self.getToken(my_grammarParser.KW_SELECT, 0)

        def obj_expr(self):
            return self.getTypedRuleContext(my_grammarParser.Obj_exprContext,0)


        def KW_FROM(self):
            return self.getToken(my_grammarParser.KW_FROM, 0)

        def STRING(self):
            return self.getToken(my_grammarParser.STRING, 0)

        def KW_WHERE(self):
            return self.getToken(my_grammarParser.KW_WHERE, 0)

        def where_expr(self):
            return self.getTypedRuleContext(my_grammarParser.Where_exprContext,0)


        def getRuleIndex(self):
            return my_grammarParser.RULE_select_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_stmt" ):
                listener.enterSelect_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_stmt" ):
                listener.exitSelect_stmt(self)




    def select_stmt(self):

        localctx = my_grammarParser.Select_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_select_stmt)
        try:
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.match(my_grammarParser.KW_SELECT)
                self.state = 64
                self.obj_expr()
                self.state = 65
                self.match(my_grammarParser.KW_FROM)
                self.state = 66
                self.match(my_grammarParser.STRING)
                self.state = 67
                self.match(my_grammarParser.KW_WHERE)
                self.state = 68
                self.where_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 70
                self.match(my_grammarParser.KW_SELECT)
                self.state = 71
                self.obj_expr()
                self.state = 72
                self.match(my_grammarParser.KW_FROM)
                self.state = 73
                self.match(my_grammarParser.STRING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Obj_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vs_info(self):
            return self.getTypedRuleContext(my_grammarParser.Vs_infoContext,0)


        def KW_COUNT(self):
            return self.getToken(my_grammarParser.KW_COUNT, 0)

        def KW_EXISTS(self):
            return self.getToken(my_grammarParser.KW_EXISTS, 0)

        def KW_DEGREE(self):
            return self.getToken(my_grammarParser.KW_DEGREE, 0)

        def KW_DISTANCE(self):
            return self.getToken(my_grammarParser.KW_DISTANCE, 0)

        def KW_COUNT_ISOLATED(self):
            return self.getToken(my_grammarParser.KW_COUNT_ISOLATED, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_obj_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj_expr" ):
                listener.enterObj_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj_expr" ):
                listener.exitObj_expr(self)




    def obj_expr(self):

        localctx = my_grammarParser.Obj_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_obj_expr)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [my_grammarParser.LBR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.vs_info()
                pass
            elif token in [my_grammarParser.KW_COUNT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(my_grammarParser.KW_COUNT)
                self.state = 79
                self.vs_info()
                pass
            elif token in [my_grammarParser.KW_EXISTS]:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.match(my_grammarParser.KW_EXISTS)
                self.state = 81
                self.vs_info()
                pass
            elif token in [my_grammarParser.KW_DEGREE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.match(my_grammarParser.KW_DEGREE)
                self.state = 83
                self.vs_info()
                pass
            elif token in [my_grammarParser.KW_DISTANCE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.match(my_grammarParser.KW_DISTANCE)
                self.state = 85
                self.vs_info()
                pass
            elif token in [my_grammarParser.KW_COUNT_ISOLATED]:
                self.enterOuterAlt(localctx, 6)
                self.state = 86
                self.match(my_grammarParser.KW_COUNT_ISOLATED)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Vs_infoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self):
            return self.getToken(my_grammarParser.LBR, 0)

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(my_grammarParser.IDENT)
            else:
                return self.getToken(my_grammarParser.IDENT, i)

        def COMMA(self):
            return self.getToken(my_grammarParser.COMMA, 0)

        def RBR(self):
            return self.getToken(my_grammarParser.RBR, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_vs_info

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVs_info" ):
                listener.enterVs_info(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVs_info" ):
                listener.exitVs_info(self)




    def vs_info(self):

        localctx = my_grammarParser.Vs_infoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vs_info)
        try:
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(my_grammarParser.LBR)
                self.state = 90
                self.match(my_grammarParser.IDENT)
                self.state = 91
                self.match(my_grammarParser.COMMA)
                self.state = 92
                self.match(my_grammarParser.IDENT)
                self.state = 93
                self.match(my_grammarParser.RBR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(my_grammarParser.LBR)
                self.state = 95
                self.match(my_grammarParser.IDENT)
                self.state = 96
                self.match(my_grammarParser.RBR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Where_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBR(self, i:int=None):
            if i is None:
                return self.getTokens(my_grammarParser.LBR)
            else:
                return self.getToken(my_grammarParser.LBR, i)

        def v_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(my_grammarParser.V_exprContext)
            else:
                return self.getTypedRuleContext(my_grammarParser.V_exprContext,i)


        def RBR(self, i:int=None):
            if i is None:
                return self.getTokens(my_grammarParser.RBR)
            else:
                return self.getToken(my_grammarParser.RBR, i)

        def OP_MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(my_grammarParser.OP_MINUS)
            else:
                return self.getToken(my_grammarParser.OP_MINUS, i)

        def pattern(self):
            return self.getTypedRuleContext(my_grammarParser.PatternContext,0)


        def OP_GR(self):
            return self.getToken(my_grammarParser.OP_GR, 0)

        def COMMA(self):
            return self.getToken(my_grammarParser.COMMA, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_where_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhere_expr" ):
                listener.enterWhere_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhere_expr" ):
                listener.exitWhere_expr(self)




    def where_expr(self):

        localctx = my_grammarParser.Where_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_where_expr)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(my_grammarParser.LBR)
                self.state = 100
                self.v_expr()
                self.state = 101
                self.match(my_grammarParser.RBR)
                self.state = 102
                self.match(my_grammarParser.OP_MINUS)
                self.state = 103
                self.pattern()
                self.state = 104
                self.match(my_grammarParser.OP_MINUS)
                self.state = 105
                self.match(my_grammarParser.OP_GR)
                self.state = 106
                self.match(my_grammarParser.LBR)
                self.state = 107
                self.v_expr()
                self.state = 108
                self.match(my_grammarParser.RBR)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(my_grammarParser.LBR)
                self.state = 111
                self.v_expr()
                self.state = 112
                self.match(my_grammarParser.RBR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(my_grammarParser.LBR)
                self.state = 115
                self.v_expr()
                self.state = 116
                self.match(my_grammarParser.COMMA)
                self.state = 117
                self.v_expr()
                self.state = 118
                self.match(my_grammarParser.RBR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class V_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(my_grammarParser.IDENT, 0)

        def UNDERSCORE(self):
            return self.getToken(my_grammarParser.UNDERSCORE, 0)

        def DOT(self):
            return self.getToken(my_grammarParser.DOT, 0)

        def KW_ID(self):
            return self.getToken(my_grammarParser.KW_ID, 0)

        def OP_EQ(self):
            return self.getToken(my_grammarParser.OP_EQ, 0)

        def INT(self):
            return self.getToken(my_grammarParser.INT, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_v_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV_expr" ):
                listener.enterV_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV_expr" ):
                listener.exitV_expr(self)




    def v_expr(self):

        localctx = my_grammarParser.V_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_v_expr)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(my_grammarParser.IDENT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(my_grammarParser.UNDERSCORE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(my_grammarParser.IDENT)
                self.state = 125
                self.match(my_grammarParser.DOT)
                self.state = 126
                self.match(my_grammarParser.KW_ID)
                self.state = 127
                self.match(my_grammarParser.OP_EQ)
                self.state = 128
                self.match(my_grammarParser.INT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PatternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def alt_elem(self):
            return self.getTypedRuleContext(my_grammarParser.Alt_elemContext,0)


        def MID(self):
            return self.getToken(my_grammarParser.MID, 0)

        def pattern(self):
            return self.getTypedRuleContext(my_grammarParser.PatternContext,0)


        def getRuleIndex(self):
            return my_grammarParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)




    def pattern(self):

        localctx = my_grammarParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pattern)
        try:
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.alt_elem()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.alt_elem()
                self.state = 133
                self.match(my_grammarParser.MID)
                self.state = 134
                self.pattern()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Alt_elemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seq(self):
            return self.getTypedRuleContext(my_grammarParser.SeqContext,0)


        def LBR(self):
            return self.getToken(my_grammarParser.LBR, 0)

        def RBR(self):
            return self.getToken(my_grammarParser.RBR, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_alt_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlt_elem" ):
                listener.enterAlt_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlt_elem" ):
                listener.exitAlt_elem(self)




    def alt_elem(self):

        localctx = my_grammarParser.Alt_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_alt_elem)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.seq()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(my_grammarParser.LBR)
                self.state = 140
                self.match(my_grammarParser.RBR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SeqContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def seq_elem(self):
            return self.getTypedRuleContext(my_grammarParser.Seq_elemContext,0)


        def seq(self):
            return self.getTypedRuleContext(my_grammarParser.SeqContext,0)


        def getRuleIndex(self):
            return my_grammarParser.RULE_seq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeq" ):
                listener.enterSeq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeq" ):
                listener.exitSeq(self)




    def seq(self):

        localctx = my_grammarParser.SeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_seq)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.seq_elem()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.seq_elem()
                self.state = 145
                self.seq()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Seq_elemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prim_pattern(self):
            return self.getTypedRuleContext(my_grammarParser.Prim_patternContext,0)


        def OP_STAR(self):
            return self.getToken(my_grammarParser.OP_STAR, 0)

        def OP_PLUS(self):
            return self.getToken(my_grammarParser.OP_PLUS, 0)

        def OP_Q(self):
            return self.getToken(my_grammarParser.OP_Q, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_seq_elem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeq_elem" ):
                listener.enterSeq_elem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeq_elem" ):
                listener.exitSeq_elem(self)




    def seq_elem(self):

        localctx = my_grammarParser.Seq_elemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_seq_elem)
        try:
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.prim_pattern()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.prim_pattern()
                self.state = 151
                self.match(my_grammarParser.OP_STAR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 153
                self.prim_pattern()
                self.state = 154
                self.match(my_grammarParser.OP_PLUS)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 156
                self.prim_pattern()
                self.state = 157
                self.match(my_grammarParser.OP_Q)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Prim_patternContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NT_NAME(self):
            return self.getToken(my_grammarParser.NT_NAME, 0)

        def LBR(self):
            return self.getToken(my_grammarParser.LBR, 0)

        def pattern(self):
            return self.getTypedRuleContext(my_grammarParser.PatternContext,0)


        def RBR(self):
            return self.getToken(my_grammarParser.RBR, 0)

        def IDENT(self):
            return self.getToken(my_grammarParser.IDENT, 0)

        def getRuleIndex(self):
            return my_grammarParser.RULE_prim_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrim_pattern" ):
                listener.enterPrim_pattern(self)
